# distributed-miner

./: Cargo.toml  README.md
src/: lib.rs  main.rs  miner.rs  rewards.rs
