[package]
name = "distributed-drillx"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5.1", features = ["derive"] }
drillx = { version = "2.0.0-beta.1", features = ["solana"] }
ore-api = {path = "../ore/api"}
ore-cli = {path = "../ore-cli", package = "ore-cli"}
ore-utils = {path = "../ore/utils"}
env_logger = "0.11.3"
log = "0.4.22"
rayon = "1.10.0"
structopt = { version = "0.3", default-features = false }
tungstenite = "0.23.0"
solana-program = "^1.18"
solana-sdk = "^1.18"
solana-client = "^1.18"
solana-rpc-client = "^1.18"
solana-transaction-status = "^1.18"
bincode = "1.3.3"
